force-app/main/default/objects/Cycle_Record_Type_Theatre_Rating__mdt/Cycle_Record_Type_Theatre_Rating__mdt.object-meta.xml
<CustomObject>
    <label>Cycle Record Type Theatre Rating</label>
    <pluralLabel>Cycle Record Type Theatre Ratings</pluralLabel>
</CustomObject>