force-app/main/default/objects/Cycle_Record_Type_Theatre_Rating__mdt/fields/Insem_Type__c.field-meta.xml
<CustomField>
    <fullName>Insem_Type__c</fullName>
    <label>Insem Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>