force-app/main/default/objects/Cycle_Record_Type_Theatre_Rating__mdt/fields/Max_Age__c.field-meta.xml
<CustomField>
    <fullName>Max_Age__c</fullName>
    <label>Max Age</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>