force-app/main/default/objects/Cycle_Record_Type_Theatre_Rating__mdt/fields/Max_Previous_Egg_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Max_Previous_Egg_Numbers__c</fullName>
    <label>Max Previous Egg Numbers</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>