force-app/main/default/objects/Cycle_Record_Type_Theatre_Rating__mdt/fields/Min_BMI__c.field-meta.xml
<CustomField>
    <fullName>Min_BMI__c</fullName>
    <label>Min BMI</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>