force-app/main/default/objects/Cycle_Record_Type_Theatre_Rating__mdt/fields/Number_of_Previous_OPUs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Previous_OPUs__c</fullName>
    <label>Number of Previous OPUs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>