force-app/main/default/objects/Cycle_Record_Type_Theatre_Rating__mdt/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>